test/tests/compiler/6_statements_and_conditional_expressions/valid/extra_credit/goto_nested_label.plx



pub fn main(none) i32 {
    jump labelB

    label labelA
    label labelB
    return 5
    return 0
}
