test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/extra_credit/label_without_statement.plx
pub fn main(none) i32 {
    # NOTE: this is invalid in C17, but valid in C23
    label foo
}
